--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ button {
     justify-content: center;
     margin-bottom: 10px;
     border-radius: 10px;
+    font-size:large;
 }
 
 #start-btn {
